Support search by class with `@Searchable` meta-annotation
If an annotation of a class is annotated with `@Searchable` then get the collection name from the annotation.